Add form for creating company after successfull registration

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <section class="login">
-  <h2 class="login__title">{{ "LOGIN.LOGIN" | translate }}</h2>
+  <h2 class="login__title mat-h2">{{ "LOGIN.LOGIN" | translate }}</h2>
   <form class="login__form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <mat-form-field>
       <mat-label>{{ "LOGIN.EMAIL" | translate }}</mat-label>
