--- a/src/app/offers/offer-item/offer-item.component.html
+++ b/src/app/offers/offer-item/offer-item.component.html
@@ -87,5 +87,6 @@
     *ngIf="!isLoading"
     [city]="offer.city"
     [category]="offer.category"
+    [currentOfferId]="offer._id"
   ></app-similar-offers>
 </div>
