--- a/src/app/dashboard/update-offer-dialog/update-offer-dialog.component.html
+++ b/src/app/dashboard/update-offer-dialog/update-offer-dialog.component.html
@@ -1,10 +1,10 @@
 <mat-dialog-content [formGroup]="offerForm" class="form">
   <mat-form-field appearance="fill">
-    <mat-label>Name</mat-label>
+    <mat-label>{{ "OFFER_FORM.NAME" | translate }}</mat-label>
     <input matInput type="text" name="name" formControlName="name" />
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Experience Level</mat-label>
+    <mat-label>{{ "OFFER_FORM.EXP_LEVEL" | translate }}</mat-label>
     <mat-select name="experienceLevel" formControlName="experienceLevel">
       <mat-option *ngFor="let level of expLevels" [value]="level">{{
         level
@@ -12,7 +12,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Category</mat-label>
+    <mat-label>{{ "OFFER_FORM.CATEGORY" | translate }}</mat-label>
     <mat-select name="category" formControlName="category">
       <mat-option *ngFor="let category of categories" [value]="category">{{
         category
@@ -20,7 +20,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Min Salary</mat-label>
+    <mat-label>{{ "OFFER_FORM.MIN_SALARY" | translate }}</mat-label>
     <input
       matInput
       type="number"
@@ -29,7 +29,7 @@
     />
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Max Salary</mat-label>
+    <mat-label>{{ "OFFER_FORM.MAX_SALARY" | translate }}</mat-label>
     <input
       matInput
       type="number"
@@ -38,7 +38,7 @@
     />
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>description</mat-label>
+    <mat-label>{{ "OFFER_FORM.DESCRIPTION" | translate }}</mat-label>
     <textarea
       matInput
       class="form__textarea"
@@ -47,7 +47,7 @@
     ></textarea>
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Must Have</mat-label>
+    <mat-label>{{ "OFFER_FORM.MUST_HAVE" | translate }}</mat-label>
     <mat-select multiple name="mustHave" formControlName="mustHave">
       <mat-option *ngFor="let item of mustHaves" [value]="item">{{
         item
@@ -55,7 +55,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Nice To Have</mat-label>
+    <mat-label>{{ "OFFER_FORM.NICE_TO_HAVE" | translate }}</mat-label>
     <mat-select multiple name="niceToHave" formControlName="niceToHave">
       <mat-option *ngFor="let item of niceToHaves" [value]="item"
         >{{ item }}
@@ -66,32 +66,36 @@
     class="example-margin"
     name="isRemote"
     formControlName="isRemote"
-    >Remote</mat-checkbox
+    >{{ "OFFER_FORM.REMOTE" | translate }}</mat-checkbox
   >
-  <h2 class="mat-h2">Address</h2>
+  <h2 class="mat-h2">{{ "OFFER_FORM.ADDRESS" | translate }}</h2>
   <mat-form-field appearance="fill">
-    <mat-label>City</mat-label>
+    <mat-label>{{ "OFFER_FORM.CITY" | translate }}</mat-label>
     <input matInput type="text" name="city" formControlName="city" />
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Post Code</mat-label>
+    <mat-label>{{ "OFFER_FORM.POST_CODE" | translate }}</mat-label>
     <input matInput type="text" name="postCode" formControlName="postCode" />
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Street</mat-label>
+    <mat-label>{{ "OFFER_FORM.STREET" | translate }}</mat-label>
     <input matInput type="text" name="street" formControlName="street" />
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Number</mat-label>
+    <mat-label>{{ "OFFER_FORM.NUMBER" | translate }}</mat-label>
     <input
       matInput
-      type="number"
+      type="text"
       name="streetNumber"
       formControlName="streetNumber"
     />
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="onSave()">Save</button>
-  <button mat-raised-button (click)="onClose()">Close</button>
+  <button mat-raised-button color="primary" (click)="onSave()">
+    {{ "OFFER_FORM.SAVE" | translate }}
+  </button>
+  <button mat-raised-button (click)="onClose()">
+    {{ "OFFER_FORM.CLOSE" | translate }}
+  </button>
 </mat-dialog-actions>
