--- a/src/app/auth/create-account/create-account.component.html
+++ b/src/app/auth/create-account/create-account.component.html
@@ -9,11 +9,15 @@
 <ng-template [ngIf]="smallScreen" [ngIfElse]="bigScreen">
   <mat-vertical-stepper linear #stepperVertical>
     <mat-step [completed]="registerDone" #verticalStep>
-      <ng-template matStepLabel> Email & Password </ng-template>
+      <ng-template matStepLabel>
+        {{ "CREATE_ACCOUNT.EMAIL_AND_PASSWORD" | translate }}
+      </ng-template>
       <ng-container *ngTemplateOutlet="stepOne"></ng-container>
     </mat-step>
     <mat-step>
-      <ng-template matStepLabel> Company Details </ng-template>
+      <ng-template matStepLabel>
+        {{ "CREATE_ACCOUNT.COMPANY_DETAILS" | translate }}
+      </ng-template>
       <ng-container *ngTemplateOutlet="stepTwo"></ng-container>
     </mat-step>
   </mat-vertical-stepper>
@@ -22,11 +26,15 @@
 <ng-template #bigScreen>
   <mat-horizontal-stepper linear #stepperHorizontal>
     <mat-step [completed]="registerDone" #horizontalStep>
-      <ng-template matStepLabel> Email & Password </ng-template>
+      <ng-template matStepLabel>
+        {{ "CREATE_ACCOUNT.EMAIL_AND_PASSWORD" | translate }}
+      </ng-template>
       <ng-container *ngTemplateOutlet="stepOne"></ng-container>
     </mat-step>
     <mat-step>
-      <ng-template matStepLabel> Company Details </ng-template>
+      <ng-template matStepLabel>
+        {{ "CREATE_ACCOUNT.COMPANY_DETAILS" | translate }}
+      </ng-template>
       <ng-container *ngTemplateOutlet="stepTwo"></ng-container>
     </mat-step>
   </mat-horizontal-stepper>
