--- a/src/app/dashboard/company-offer-item/company-offer-item.component.html
+++ b/src/app/dashboard/company-offer-item/company-offer-item.component.html
@@ -1,6 +1,6 @@
 <mat-card class="offer">
   <mat-card-header>
-    <mat-card-title>{{ offer.name }} - 3 Applications</mat-card-title>
+    <mat-card-title>{{ offer.name }}</mat-card-title>
     <mat-card-subtitle
       >{{ offer.experienceLevel }} - {{ offer.category }} -
       {{ offer.createdAt | date: "shortDate" }} ({{ offer.salaryMin }} -
@@ -8,7 +8,7 @@
     >
   </mat-card-header>
   <mat-card-content>
-    <h2 class="mat-h2">Must Have</h2>
+    <h2 class="mat-h2">{{ "DASHOBARD_OFFER_ITEM.MUST_HAVE" | translate }}</h2>
     <div class="technologies">
       <mat-chip-list class="offer__nicetohave">
         <mat-chip color="accent" selected *ngFor="let item of offer.mustHave">{{
@@ -16,7 +16,9 @@
         }}</mat-chip>
       </mat-chip-list>
     </div>
-    <h2 class="mat-h2">Nice To Have</h2>
+    <h2 class="mat-h2">
+      {{ "DASHOBARD_OFFER_ITEM.NICE_TO_HAVE" | translate }}
+    </h2>
     <div class="technologies">
       <mat-chip-list class="offer__musthave">
         <mat-chip
@@ -32,11 +34,11 @@
   <mat-card-actions>
     <button mat-raised-button color="primary" (click)="onOpenUpdateDialog()">
       <mat-icon>create</mat-icon>
-      UPDATE
+      {{ "DASHOBARD_OFFER_ITEM.UPDATE" | translate }}
     </button>
     <button mat-raised-button color="primary" (click)="onOpenDeleteDialog()">
       <mat-icon>delete</mat-icon>
-      DELETE
+      {{ "DASHOBARD_OFFER_ITEM.DELETE" | translate }}
     </button>
   </mat-card-actions>
 </mat-card>
