--- a/src/app/dashboard/user-dashboard/user-dashboard.component.html
+++ b/src/app/dashboard/user-dashboard/user-dashboard.component.html
@@ -23,7 +23,7 @@
           style="width: auto; height: 40px"
         />
       </ng-template>
-      <app-edit-company-details></app-edit-company-details>
+      <app-edit-company-details [company]="company"></app-edit-company-details>
     </mat-tab>
   </mat-tab-group>
 </section>
