--- a/src/app/dashboard/edit-company-dialog/edit-company-dialog.component.html
+++ b/src/app/dashboard/edit-company-dialog/edit-company-dialog.component.html
@@ -1,1 +1,84 @@
-<p>edit-company-dialog works!</p>
+<mat-dialog-content class="form" [formGroup]="companyForm">
+  <div class="form__details">
+    <h2 class="mat-h2">{{ "COMPANY_FORM.COMPANY_DETAILS" | translate }}</h2>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.NAME" | translate }}</mat-label>
+      <input matInput type="text" formControlName="name" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.DESCRIPTION" | translate }}</mat-label>
+      <textarea matInput formControlName="description"></textarea>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.FOUNDED_IN" | translate }}</mat-label>
+      <input matInput type="number" formControlName="foundedIn" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.TECHNOLOGIES" | translate }}</mat-label>
+      <mat-select formControlName="technologies" multiple>
+        <mat-option *ngFor="let tech of technologies" [value]="tech">{{
+          tech
+        }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.COMPANY_SIZE" | translate }}</mat-label>
+      <input matInput type="number" formControlName="companySize" />
+    </mat-form-field>
+  </div>
+  <div class="form__address">
+    <h2 class="mat-h2">{{ "COMPANY_FORM.CONTACT" | translate }}</h2>
+    <mat-form-field appearance="fill">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.CITY" | translate }}</mat-label>
+      <input matInput type="text" formControlName="city" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.POST_CODE" | translate }}</mat-label>
+      <input matInput type="text" formControlName="postCode" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.STREET" | translate }}</mat-label>
+      <input matInput type="text" formControlName="street" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.NUMBER" | translate }}</mat-label>
+      <input matInput type="text" formControlName="streetNumber" />
+    </mat-form-field>
+  </div>
+  <div class="form__social">
+    <h2 class="mat-h2">
+      {{ "COMPANY_FORM.WEBSITE_AND_SOCIAL_MEDIA" | translate }}
+    </h2>
+    <mat-form-field appearance="fill">
+      <mat-label>{{ "COMPANY_FORM.WEBSITE" | translate }}</mat-label>
+      <input matInput type="url" formControlName="website" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Facebook Link</mat-label>
+      <input matInput type="url" formControlName="facebookLink" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Linkedin Link</mat-label>
+      <input matInput type="url" formControlName="linkedinLink" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Instagram Link</mat-label>
+      <input matInput type="url" formControlName="instagramLink" />
+    </mat-form-field>
+  </div>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="onSave()"
+    [disabled]="!companyForm.valid"
+  >
+    Save
+  </button>
+  <button mat-raised-button (click)="onClose()">Close</button>
+</mat-dialog-actions>
