--- a/src/app/dashboard/user-dashboard/user-dashboard.component.html
+++ b/src/app/dashboard/user-dashboard/user-dashboard.component.html
@@ -13,7 +13,7 @@
       <app-add-offer [companyId]="company._id"></app-add-offer>
     </mat-tab>
     <mat-tab>
-      <ng-template mat-tab-label style="display: flex; align-items: center">
+      <ng-template mat-tab-label class="flexAlignCenter">
         <span style="margin-right: 10px">{{
           "DASHBOARD.COMPANY" | translate
         }}</span>
