--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,12 +53,6 @@ a {
   margin: 10px 0;
 }
 
-$header-background-color: #f8f8f8;
-$background-color: #fff;
-$primary-color: #fff;
-$primary-color-on-hover: #fff;
-$secondary-color: #fff;
-$secondary-color-on-hover: #fff;
-// 31c6e8
-// 31e89f
-// 31e8e8
+.mb-10 {
+  margin-bottom: 10px;
+}
