--- a/src/app/offers/offer-item/offer-item.component.html
+++ b/src/app/offers/offer-item/offer-item.component.html
@@ -63,7 +63,7 @@
     <mat-card class="company">
       <div class="company__info">
         <img
-          src="../../../assets/img/company.png"
+          [src]="offer.company.logoUrl"
           alt="{{ offer.company.name }}"
           class="company__logo"
         />
