--- a/src/app/offers/offers-list/offers-list.component.html
+++ b/src/app/offers/offers-list/offers-list.component.html
@@ -87,7 +87,7 @@
         >{{ offer.createdAt | date: "shortDate" }}</small
       >
       <img
-        src="../../../assets/img/company.png"
+        src="{{ offer.company.logoUrl }}"
         alt=""
         class="offer__companyLogo"
       />
