Fix bug with wrong formContorl in offer form

--- a/src/app/dashboard/add-offer/add-offer.component.html
+++ b/src/app/dashboard/add-offer/add-offer.component.html
@@ -99,9 +99,9 @@
           <mat-label>{{ "OFFER_FORM.NUMBER" | translate }}</mat-label>
           <input
             matInput
-            type="number"
-            name="number"
-            formControlName="number"
+            type="text"
+            name="streetNumber"
+            formControlName="streetNumber"
           />
         </mat-form-field>
       </div>
