--- a/src/app/offers/watched-offers/watched-offers.component.html
+++ b/src/app/offers/watched-offers/watched-offers.component.html
@@ -19,9 +19,9 @@
           </button>
         </mat-list-item>
       </mat-nav-list>
-      <h3 *ngIf="offers.length === 0" style="text-align: center">
+      <h2 class="mat-h2" *ngIf="offers.length === 0" style="text-align: center">
         {{ "SAVED.NO_OFFERS" | translate }}
-      </h3>
+      </h2>
     </mat-card>
   </div>
 </section>
