--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -37,11 +37,14 @@
 
   &--auth {
     a {
+      width: 115px;
+      display: inline-block;
       color: #fff;
       background-color: #31c6e8;
       font-size: 18px;
-      padding: 8px 12px;
+      padding: 6px 12px;
       border-radius: 20px;
+      text-align: center;
       transition: background-color 0.3s ease;
 
       &:hover {
