--- a/src/app/offers/offer-item/offer-item.component.scss
+++ b/src/app/offers/offer-item/offer-item.component.scss
@@ -56,8 +56,12 @@
   }
 
   &__logo {
-    height: 100px;
     width: auto;
+    height: 100px;
+    border: 2px solid #dedbd5;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px 0;
   }
 }
 
